--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,15 @@
 }
 
 .form {
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; */
   width: 20vw;
   border: 1px solid blue;
   margin-top: 50px;
+}
+
+button {
+  margin: 5px;
 }
