--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-column: 2 / 3;
   background-color: #bccbde;
-  border-style: groove;
+  /* border-style: groove; */
   gap: 15px;
   margin-left: 15px;
   margin-top: 15px;
