--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
   grid-template-rows: .1fr;
   text-align: center;
   height: 100vh;
-  background-color: lightgrey;
+  background-color: teal;
   border-style: groove;
 }
 
@@ -38,14 +38,22 @@ body {
   margin-right: 15px;
 }
 
-#add-book {
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; */
-
-  width: 20vw;
-  border: 1px solid blue;
-  margin: 5px;
+.add-book-button {
+  font-size: 24px;
+  margin-top: 25px;
+  margin-bottom: 10px;
+  border-radius: 5px;
 }
+
+#add-book {
+  display: grid;
+  grid-template-columns: .1fr 1fr;
+  gap: 10px;
+  margin: 50px;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+
+
 
