--- a/styles.css
+++ b/styles.css
@@ -42,18 +42,26 @@ body {
   font-size: 24px;
   margin-top: 25px;
   margin-bottom: 10px;
-  border-radius: 5px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px black;
 }
 
 #add-book {
   display: grid;
-  grid-template-columns: .1fr 1fr;
+  grid-template-columns: .1fr 3fr;
   gap: 10px;
   margin: 50px;
   justify-content: center;
   align-items: center;
-  font-size: 20px;
+  font-size: 25px;
 }
 
+.reset-button, .submit-button {
+  border-radius: 10px;
+  padding: 5px;
+  margin: 5px;
+  font-size: 18px;
+  box-shadow: 5px 5px 5px black;
+}
 
 
